# countdown-timers

./: .env  .gitignore  .npmrc  .prettierignore  .prettierrc  README.md  build.sh  eslint.config.js  install.sh  lint.sh  package.json  svelte.config.js  tsconfig.json  vite.config.ts  wasm.sh
.github/workflows/: deploy.yml
.reuse/: dep5
benches/: runtime.bench.ts
countdown-lib/: eslint.config.js  package.json
countdown-lib/benches/: runtime.bench.ts
countdown-lib/src/: bench.ts  storage.ts  timers.ts
countdown-rs/: Cargo.toml
countdown-rs/cd-core/: Cargo.toml
countdown-rs/cd-core/src/: lib.rs
countdown-rs/cd-napi/: .oxlintrc.json  .prettierignore  Cargo.toml  eslint.config.js  package.json  simple-test.js  tsconfig.json
countdown-rs/cd-napi/npm/win32-x64-msvc/: package.json
countdown-rs/cd-napi/src/: lib.rs
countdown-rs/cd-native/: Cargo.toml
countdown-rs/cd-native/src/: lib.rs
countdown-rs/cd-wasm/: Cargo.toml
countdown-rs/cd-wasm/src/: lib.rs
countdown-rs/src/: lib.rs
react/: .prettierignore  next.config.mjs  package.json  tsconfig.json
root/: index.html  package.json  vite.config.ts
root/bench/: index.html
root/legal/: index.html
root/public/: site.webmanifest
root/src/: main.ts  navbar.css  style.css  variables.css  vite-env.d.ts
solid/: .env  .prettierignore  app.config.ts  eslint.config.js  package.json  tsconfig.json
solid/public/: browserconfig.xml  site.webmanifest
solid/src/: app.css  app.scss  app.tsx  entry-client.tsx  entry-server.tsx  global.d.ts
src/: app.d.ts  app.html
src/lib/: Button.svelte  Kebab.svelte  _variables.scss  bench.ts  index.ts  storage.ts  timers.ts
src/routes/: +error.svelte  +layout.js  +layout.svelte  +page.svelte  AddTimer.svelte  Footer.svelte  FooterButton.svelte  Navbar.svelte  Timer.svelte  TimerBlock.svelte  storage.ts  timers.ts
svelte/: .prettierignore  eslint.config.js  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vitest-setup.js
svelte/benches/: runtime.bench.ts
svelte/static/: browserconfig.xml  site.webmanifest
vue/: .prettierignore  eslint.config.js  nuxt.config.ts  package.json  tsconfig.json
(+94 files in other folders)
