# Copyright 2024 sby1ce
# 
# SPDX-License-Identifier: CC0-1.0

[package]
name = "timers"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
