# Copyright 2024 sby1ce
# 
# SPDX-License-Identifier: CC0-1.0

[package]
name = "cd-native"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
cd-core = { path = "../cd-core" }
chrono = "0.4"

[lints.clippy]
single_call_fn = { level = "allow", priority = 1 }  # God function
too_many_lines = { level = "allow", priority = 1 }  # No, I don't think so
module_name_repetitions = { level = "allow", priority = 1 }  # This is annoying
multiple_crate_versions = { level = "allow", priority = 1 }  # Can't do anything about it
all = "warn"
cargo = "warn"
nursery = "deny"
pedantic = "deny"
